syntax = "proto3";

package im_main_proto;

// 生成golang文件的目录
option go_package = "github.com/mimis-s/IM-Service/src/common/commonproto/im_main_proto";

message ChatSingleReq {
    string TestStr = 1;
}

message ChatSingleRes {
    string TestStr = 1;
}